--- a/frotafacil/controlefrota/templates/controlefrota/listar_requisicao.html
+++ b/frotafacil/controlefrota/templates/controlefrota/listar_requisicao.html
@@ -1,8 +1,7 @@
-{% extends 'home_veiculo.html' %}
+{% extends 'controlefrota/home_veiculo.html' %}
 {% block content %}
 <div class="container mt-4">
     <h2>Requisições de Viatura/Motorista</h2>
-    <a href="{% url 'cadastrar_requisicao' %}" class="btn btn-success mb-3">Nova Requisição</a>
     <form method="get" class="row g-3 mb-3 align-items-end">
         <div class="col-md-3">{{ form.veiculo.label_tag }} {{ form.veiculo }}</div>
         <div class="col-md-3">{{ form.usuario.label_tag }} {{ form.usuario }}</div>
