--- a/frotafacil/controlefrota/templates/controlefrota/cadastrar_requisicao.html
+++ b/frotafacil/controlefrota/templates/controlefrota/cadastrar_requisicao.html
@@ -1,4 +1,4 @@
-{% extends 'home_veiculo.html' %}
+{% extends 'controlefrota/home_veiculo.html' %}
 {% block content %}
 <div class="container mt-4">
     <h2>Cadastrar Requisição de Viatura/Motorista</h2>
