--- a/frotafacil/controlefrota/templates/controlefrota/listar_veiculo.html
+++ b/frotafacil/controlefrota/templates/controlefrota/listar_veiculo.html
@@ -1,4 +1,4 @@
-{% extends 'home_veiculo.html' %}
+{% extends 'controlefrota/home_veiculo.html' %}
 
 {% block title %}Veículos Cadastrados{% endblock %}
 
