Configure Windows and Linux

--- a/frotafacil/auth_django/templates/registration/login.html
+++ b/frotafacil/auth_django/templates/registration/login.html
@@ -128,7 +128,7 @@
             </a>
         </div>
         <div style="margin-top: 10px;">
-            <a href="/admin/">
+            <a href="{{ PREFIX }}/admin/">
                 <button type="button" style="width: 100%; background-color: #1976D2; color: white; font-weight: bold;">Acessar Django Admin</button>
             </a>
         </div>
