--- a/frotafacil/controlefrota/templates/controlefrota/cadastrar_requisicao.html
+++ b/frotafacil/controlefrota/templates/controlefrota/cadastrar_requisicao.html
@@ -1,4 +1,8 @@
 {% extends 'controlefrota/home_veiculo.html' %}
+{% block menu_itens %}
+<a href="{% url 'home_requisicao' %}">📋 <span class="menu-text">Requisição</span></a>
+<a href="{% url 'listar_requisicao' %}">📋 <span class="menu-text">Listar Requisição</span></a>
+{% endblock %}
 {% block content %}
 <div class="container mt-4">
     <h2>Cadastrar Requisição de Viatura/Motorista</h2>
