--- a/frotafacil/frotafacil/frotafacil/templates/home.html
+++ b/frotafacil/frotafacil/frotafacil/templates/home.html
@@ -178,7 +178,7 @@
         <div class="menu-buttons">
             <a href="{% url 'home_veiculo' %}">🚗 <span class="menu-text">Veículos</span></a>
             <a href="{% url 'home_requisicao' %}">📝 <span class="menu-text">Requisições</span></a>
-            <a href="{% url 'admin:index' %}" class="admin">⚙️ <span class="menu-text">Administração</span></a>
+            <a href="{% url 'admin:index' %}" class="admin">⚙️ <span class="menu-text">Administração</span></a> 
         </div>
     </div>
     <button class="toggle-btn-floating" id="menu-toggle-floating" style="display:none;">☰</button>
@@ -245,7 +245,7 @@
                         <div class="card-icon">⚙️</div>
                         <h5 class="card-title">Administração</h5>
                         <p class="card-text">Acesse o painel administrativo para gerenciar usuários, configurações e outras funcionalidades do sistema.</p>
-                       <a href="{% url 'admin:index' %}" class="btn btn-primary">Acessar</a>
+                        <a href="{% url 'admin:index' %}" class="admin">⚙️ <span class="menu-text">Acessar></a>
                     </div>
                 </div>
             </div>
