--- a/frotafacil/controlefrota/templates/controlefrota/listar_veiculo.html
+++ b/frotafacil/controlefrota/templates/controlefrota/listar_veiculo.html
@@ -87,6 +87,7 @@
     </div>
 
     <!-- Lista de Veículos -->
+    <a href="{% url 'exportar_veiculos_pdf' %}" class="btn btn-danger mb-3" target="_blank">Exportar PDF</a>
     <div class="table-responsive">
         <table class="table">
             <thead>
