--- a/frotafacil/controlefrota/templates/cadastrar_veiculo.html
+++ b/frotafacil/controlefrota/templates/cadastrar_veiculo.html
@@ -1,10 +1,10 @@
 {% extends 'home_veiculo.html' %}
-
 {% block title %}Cadastrar Veículo{% endblock %}
-
 {% block menu_itens %}
 <a href="{% url 'home_veiculo' %}">🚗 <span class="menu-text">Veículo</span></a>
 <a href="{% url 'listar_veiculo' %}">📋 <span class="menu-text">Listar Veículo</span></a>
+<a href="{% url 'home' %}" class="back-btn">🏠 <span class="menu-text">Voltar ao Menu</span></a>
+<a href="{% url 'admin:index' %}" class="admin">⚙️ <span class="menu-text">Administração</span></a>
 {% endblock %}
 
 {% block content %}
