--- a/frotafacil/controlefrota/templates/editar_requisicao.html
+++ b/frotafacil/controlefrota/templates/editar_requisicao.html
@@ -1,4 +1,4 @@
-{% extends 'home_veiculo.html' %}
+{% extends 'home_requisicao.html' %}
 {% block content %}
 <div class="container mt-4">
     <h2>Editar Requisição</h2>
