--- a/frotafacil/controlefrota/templates/listar_veiculo.html
+++ b/frotafacil/controlefrota/templates/listar_veiculo.html
@@ -1,12 +1,11 @@
 {% extends 'home_veiculo.html' %}
-
 {% block title %}Veículos Cadastrados{% endblock %}
-
 {% block menu_itens %}
 <a href="{% url 'cadastrar_veiculo' %}">➕ <span class="menu-text">Cadastrar Veículo</span></a>
 <a href="{% url 'home_veiculo' %}">🚗 <span class="menu-text">Veículo</span></a>
+<a href="{% url 'home' %}" class="back-btn">🏠 <span class="menu-text">Voltar ao Menu</span></a>
+<a href="{% url 'admin:index' %}" class="admin">⚙️ <span class="menu-text">Administração</span></a>
 {% endblock %}
-
 {% block content %}
 <style>
 .table-responsive {
